# DroneSimulation

./: .clang-format  .gitattributes  CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationTest.cpp  Coordinate.hpp  Main.cpp  Parallel.cpp  Parallel.hpp  Simulation.cpp  Simulation.hpp  SimulationImpl.cpp  SimulationImpl.hpp  SimulationTest.cpp  State.cpp  State.hpp  State.json  State.txt  StateDeserialization.cpp  StateDeserialization.hpp  StateSerialization.cpp  StateSerialization.hpp  StateTest.cpp  TestDrones.cpp
Gui/: Configuration.py  Simulation.py  SplashScreen.py  State.py  config.1.json  config.json  main.py
